--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,16 @@
 list=Array[Dictionary]([{
+"base": &"Node",
+"class": &"AsepriteImportData",
+"icon": "",
+"language": &"GDScript",
+"path": "res://addons/aseprite_importer/classes/AsepriteImportData.gd"
+}, {
+"base": &"Node",
+"class": &"AsepriteImporter",
+"icon": "",
+"language": &"GDScript",
+"path": "res://addons/aseprite_importer/classes/AsepriteImporter.gd"
+}, {
 "base": &"Resource",
 "class": &"CommandAction",
 "icon": "",
@@ -58,6 +70,12 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://addons/controller_icons/objects/TextureRect.gd"
+}, {
+"base": &"Node",
+"class": &"EditorTheme",
+"icon": "",
+"language": &"GDScript",
+"path": "res://addons/aseprite_importer/classes/EditorTheme.gd"
 }, {
 "base": &"CanvasLayer",
 "class": &"Fade",
