--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/scripts/misc/car.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://shaders/", "res://settings/", "res://scenes/", "res://scenes/misc/", "res://scenes/menus/", "res://scenes/levels/", "res://scenes/enemies/", "res://scenes/cutscenes/", "res://scenes/characters/", "res://assets/", "res://assets/shaders/", "res://assets/scripts/", "res://assets/scripts/utilities/", "res://assets/scripts/player/", "res://assets/scripts/misc/", "res://assets/scripts/menus/", "res://assets/scripts/GUI/", "res://assets/scripts/enemies/", "res://assets/scripts/controllers/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -32,15 +32,15 @@ current_scene="res://scenes/characters/player.tscn"
 center_split_offset=-234
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=4
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://assets/scripts/animationData.gd", "res://assets/scripts/character.gd", "res://assets/scripts/level.gd", "res://assets/scripts/player/player.gd", "res://assets/scripts/enemies/testdummy.gd"]
+open_scripts=["res://assets/scripts/animationData.gd", "res://assets/scripts/character.gd", "res://assets/scripts/level.gd", "res://assets/scripts/player/player2.gd", "res://assets/scripts/player/player.gd", "res://assets/scripts/enemies/testdummy.gd", "res://assets/scripts/player/z-jump.gd"]
 open_help=["AnimationPlayer", "CharacterBody2D", "Input", "Node", "Object", "ProjectSettings", "Sprite2D"]
 script_split_offset=387
 list_split_offset=0
-selected_script="res://assets/scripts/level.gd"
+selected_script="res://assets/scripts/player/z-jump.gd"
 
 [editor_log]
 
