--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -59,11 +59,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
-"folded_lines": Array[int]([66, 158, 163, 170, 181]),
+"column": 30,
+"folded_lines": Array[int]([66, 158, 163, 170]),
 "h_scroll_position": 0,
-"row": 113,
-"scroll_position": 0.0,
+"row": 36,
+"scroll_position": 99.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -91,7 +91,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 8,
-"scroll_position": 0.0,
+"scroll_position": 19.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -128,20 +128,6 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://assets/scripts/AnimationData.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 6,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://assets/scripts/menus/titlescreen.gd]
 
 state={
@@ -161,16 +147,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 40,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
+"row": 6,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 25,
-"selection_from_line": 2,
-"selection_to_column": 40,
-"selection_to_line": 2,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -179,15 +161,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(23),
-"column": 11,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 3,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 4,
-"selection_from_line": 6,
-"selection_to_column": 11,
-"selection_to_line": 6,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://assets/scripts/player/z-jump.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 15,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 14,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
